@@ -47,9 +47,15 @@ from optimize_images.reporting import show_img_exception
 def main():
     appstart = timer()
     line_width, our_pool_executor, workers = adjust_for_platform()
-    (watch_dir, src_path, recursive, quality, remove_transparency, reduce_colors,
-     max_colors, max_w, max_h, keep_exif, convert_all, conv_big, force_del, bg_color,
-     grayscale, ignore_size_comparison, fast_mode) = get_args()
+
+    (watch_dir, src_path, recursive, quality, remove_transparency,
+     reduce_colors, max_colors, max_w, max_h, keep_exif, convert_all, conv_big,
+     force_del, bg_color, grayscale, ignore_size_comparison, fast_mode, jobs) \
+        = get_args()
+
+    if jobs != 0:
+        workers = jobs
+
     found_files = 0
     optimized_files = 0
     total_src_size = 0
